@@ -14,6 +14,10 @@ c - crash     b - bug fix    e - enhancement    f - new feature
       src/server/stat_job.c revision 3268.
   b - Fix for Bugzilla bug 35 - printing the wrong pid (normal mode) and not printing
       any pid for high availability mode.
+  f - added a diagnostic script (contrib/diag/tdiag.sh).  This script grabs the log 
+      files for the server and the mom, records the output of qmgr -c 'p s' and the
+      nodefile, and creates a tarfile containing these.
+
 
 2.4.2
   b - Changed predicate in pbsd_main.c for the two locations where 
